--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@sdkgen/node-runtime": "^1.5.5",
     "bcrypt": "^5.0.1",
-    "class-transformer": "^0.4.0",
     "dotenv": "^10.0.0",
     "knex": "^0.95.11",
     "pg": "^8.7.1",
@@ -20,6 +19,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/faker": "^5.5.8",
     "@types/knex": "^0.16.1",
